--- a/generate_graphs.py.ipynb
+++ b/generate_graphs.py.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def write_graph(G, filename, direction = 'in'):\n",
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -68,9 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen_random_directed_graph(100, 500, '100_500_random_directed.dat')"
@@ -78,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gen_gnc_directed_graph(n, filename):\n",
@@ -104,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -169,14 +163,45 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen_digraph_from(nx.powerlaw_cluster_graph(100, 1, .7), '100_power_law_cluster.dat')\n",
     "gen_digraph_from(nx.powerlaw_cluster_graph(4096, 1, .7), '4096_power_law_cluster.dat')\n",
     "gen_digraph_from(nx.powerlaw_cluster_graph(100000, 1, .7), '100000_power_law_cluster.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gen_digraph_from(nx.powerlaw_cluster_graph(1000000, 1, .7), '1000000_power_law_cluster.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gen_digraph_from(nx.powerlaw_cluster_graph(10000000, 1, .7), '10000000_power_law_cluster.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gen_digraph_from(nx.powerlaw_cluster_graph(100000000, 1, .7), '100000000_power_law_cluster.dat')"
    ]
   },
   {
@@ -864,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
